redo the experience section

--- a/experience.html
+++ b/experience.html
@@ -55,6 +55,32 @@
         
         <!-- Skills Grid -->
         <div class="skills-grid-new">
+          <!-- Programming Languages -->
+          <div class="skill-category-card">
+            <div class="skill-category-header">
+              <span class="category-icon">💻</span>
+              <h3>Programming Languages</h3>
+            </div>
+            <div class="skill-items">
+              <div class="skill-item">
+                <img src="./assets/logo/python.svg" alt="Python" />
+                <span>Python</span>
+              </div>
+              <div class="skill-item">
+                <img src="./assets/logo/javascript.svg" alt="JavaScript" />
+                <span>JavaScript</span>
+              </div>
+              <div class="skill-item">
+                <img src="./assets/logo/java-svgrepo-com.svg" alt="Java" />
+                <span>Java</span>
+              </div>
+              <div class="skill-item">
+                <img src="./assets/logo/c++.png" alt="C++" />
+                <span>C++</span>
+              </div>
+            </div>
+          </div>
+
           <!-- Frontend -->
           <div class="skill-category-card">
             <div class="skill-category-header">
